# restaurantlookup

./: .dockerignore  .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  manage.py  package-lock.json  pyproject.toml  requirements.txt
accounts/: admin.py  form_validator.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_otp_expiring_at.py  0003_alter_otp_expiring_at.py
donation/: admin.py  forms.py  models.py  urls.py  views.py
donation/migrations/: 0001_initial.py
public/: layout.js
public/tailwind/: command.txt
restaurant_stores/: admin.py  apps.py  forms.py  models.py  urls.py  validators.py  views.py
restaurant_stores/migrations/: 0001_initial.py  0002_remove_dish_category_alter_restaurant_website.py
restaurant_stores/templatetags/: filters.py
restaurantlookup/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
reviews/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
reviews/migrations/: 0001_initial.py
tailwind/: command.txt
tailwind/src/: output.css
templates/: 403.html  404.html  500.html  _required.html  layout.html
templates/accounts/: change_email.html  change_password.html  change_username.html  login.html  logout.html  profile.html  signup.html  update_user_details.html  verify_email.html
templates/donation/: donation_page.html
templates/restaurant_stores/: add_address.html  add_restaurant.html  add_restaurant_dish.html  add_restaurant_image.html  dish.html  home.html  restaurant_stores.html  (+2 more)
utils/: cloudinary.py  data.py  razorpay.py
(+9 files in other folders)
