[project]
name = "restaurantlookup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "certifi==2024.6.2",
    "charset-normalizer==3.3.2",
    "cloudinary==1.40.0",
    "django==5.0.6",
    "django-appconf==1.0.6",
    "django-compressor==4.4",
    "gunicorn==22.0.0",
    "idna==3.7",
    "packaging==24.1",
    "pillow==10.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv==1.0.1",
    "razorpay==1.4.2",
    "rcssmin==1.1.1",
    "requests==2.32.3",
    "rjsmin==1.2.1",
    "setuptools>=80.9.0",
    "six==1.16.0",
    "sqlparse==0.5.0",
    "typing-extensions==4.12.1",
    "urllib3==2.2.2",
    "whitenoise==6.7.0",
]
